@@ -1,10 +1,14 @@
 import { memo, useState } from 'react';
 import AddIcon from '@material-ui/icons/Add';
+import SkipPreviousIcon from '@material-ui/icons/SkipPrevious';
+import SkipNextIcon from '@material-ui/icons/SkipNext';
+import PropTypes from 'prop-types';
+import { NavLink } from 'react-router-dom';
 
 import { Header } from 'components';
 import NewNoteModal from '../../modals/NewNoteModal';
 
-const HeaderNotes = () => {
+const HeaderNotes = ({ year }) => {
   const [showModal, setShowModal] = useState(false);
 
   /**
@@ -19,7 +23,22 @@ const HeaderNotes = () => {
     <>
       <Header
         title='Notas'
+        description={`Notas ${year}`}
         buttons={[
+          {
+            component: NavLink,
+            to: `/app/notas/${year - 1}`,
+            Icon: SkipPreviousIcon,
+            label: `${year - 1}`,
+            variant: 'outlined',
+          },
+          {
+            component: NavLink,
+            to: `/app/notas/${+year + 1}`,
+            Icon: SkipNextIcon,
+            label: `${+year + 1}`,
+            variant: 'outlined',
+          },
           {
             Icon: AddIcon,
             label: 'Nueva',
@@ -29,11 +48,16 @@ const HeaderNotes = () => {
           },
         ]}
       />
-      <NewNoteModal close={_closeModal} show={showModal} />
+      <NewNoteModal close={_closeModal} show={showModal} year={year} />
     </>
   );
 };
 
 HeaderNotes.displayName = 'HeaderNotes';
+
+HeaderNotes.propTypes = {
+  year: PropTypes.string.isRequired,
+};
+
 export const story = HeaderNotes;
 export default memo(HeaderNotes);
